Fix widths when there is horizontal scrolling.

--- a/resources/public/style.css
+++ b/resources/public/style.css
@@ -20,9 +20,13 @@ body {
     flex-direction: row;
 }
 
-#root.table {
-    flex: 0 1 auto;
-    min-width: 0;
+#root {
+    width: 100vw;
+    overflow: hidden;
+}
+
+#root > .table {
+    max-width: 100%;
 }
 
 #root.wrapped-element, #root.item {
@@ -146,6 +150,7 @@ body {
 
 .tabs-holder {
     margin-bottom: 2px;
+    margin-left: 3px; /* For left end of first tab */
 }
 
 .tab-tree {
@@ -508,7 +513,6 @@ body {
     /* So we can find the position of elements relative to this node 
     for horizontal scrolling */
     position: relative;
-    max-width: 100vw;
     flex: 0 1 auto;
     display: flex;
     flex-direction: column;
